--- a/repte-3/src/App.css
+++ b/repte-3/src/App.css
@@ -1,67 +1,70 @@
-/***    General     ***/
 * {
     box-sizing: border-box;
-    font-family: "Inter", sans-serif
+    font-family: "Inter", sans-serif;
     
 }
 
 body {
     text-align: center;
-    background-color: #cdcdf3;
+    background-color: #EBEFFF;
+    margin-top: 0;
+    width: 1280px;
+    min-width: 1280px;
+    overflow-x : hidden;
+    
 }
+
 
 .container-login{
     display: flex;
-    justify-content: space-around;
-    margin-top: 150px;
+    justify-content: center;
+    margin-top: 100px;
 }
 
 .container-register{
     display: flex;
-    justify-content: space-around;
-    margin-top: 0px;
+    justify-content: center;
+   
 }
 
 .error{
     color: red;
     width: 300px;
-    margin: auto;
-    font-size: 0.6em;
+    margin: -10px 0px 5px 10px;;
+    font-size: .8em;
 }
 
 .loginImg{
-   width:300px;
+   width:500px;
+   height: 100%;
+
 }
 
 .registerImg{
-    width:300px;
-    height: 310px;
-    margin-top: 100px;
+    width:450px;
+    height: 100%;
+    margin-top: 200px;
  }
 
 .inputs{
     margin-top: 100px;
+    margin-right: 100px;
+    margin-left: 100px;
 }
 
 .inputs input{
-    border: 2px solid black;
-    border-radius: 10px;
+    border: 2px solid #656ED3;
+    border-radius: 50px;
     padding: 2px 5px;
     background: none;
     width: 400px ;
     margin-top: 10px;
     margin-bottom: 10px;
+    outline: none;
 }
 
-.form-container input{
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 2px 5px;
-    background: none;
-    width: 400px ;
-}
 
-.form-container h4, p{
+.form-register-container h4, p{
     font-weight: 400;
     margin: 0px;
 }
@@ -72,12 +75,17 @@ body {
     border-radius: 10px;
     padding: 2px 5px;
     width: 400px ;
-    background-color: #a7a7d9;
-    color: #d7d7f3;
+    background-color: #656ED3;
+    color: #FFFFFF;
     font-size: 1em;
     margin-bottom: 70px;
     cursor: pointer;
+}
 
+.sub-btn:hover{
+   
+    background-color: #5158ac;
+ 
 }
 
 form p{
@@ -89,4 +97,29 @@ form p{
 form h4{
     text-align: justify;
     margin: 20px 0px;
+}
+
+.rectangle{
+    position: absolute;
+    top: 0px;
+    left: 900px;
+    width: 1200px;
+    height: 100%;
+    background-color: #AFB3FF;
+    z-index: -1;
+}
+
+.rectangle2{
+    position: absolute;
+    top: -100px;
+    left: 50px;
+    width: 300px;
+    height: 600px;
+    background-color: #AFB3FF;
+    z-index: -1;
+    border-radius: 100px;
+}
+
+.social img{
+    margin: 2px 2px;
 }
